--- a/css/qian.css
+++ b/css/qian.css
@@ -43,3 +43,20 @@ body .shell-main-footer {
     font: 100 30px 'font';
     background-color: #a1e6ff;
 }
+.word {
+    color: rgb(248, 247, 247);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 700px;
+    height: 220px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-width: 10px;
+    border-style: solid;
+    border-color: rgba(255, 255, 255, 0.2);
+    border-image: initial;
+}
