--- a/css/star.css
+++ b/css/star.css
@@ -1,17 +1,13 @@
 .word {
-    color: rgb(248, 247, 247);
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 700px;
-    height: 220px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-width: 10px;
-    border-style: solid;
-    border-color: rgba(255, 255, 255, 0.2);
-    border-image: initial;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 700px;
+  height: 220px;
+  border: solid 10px rgba(255, 255, 255, 0.199);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
