--- a/css/index.css
+++ b/css/index.css
@@ -162,7 +162,7 @@ body .shell-main-lbt {
     background-color: #978989;
     margin-bottom: 150px;
     overflow: hidden;
-    background-image: url("../image/lbt.gif");
+    background-image: url("../image/tu.gif");
     background-color: #fff;
     background-repeat: no-repeat;
     background-size: contain;
